--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             </div>
           </div>
 
+          
+
           <div class="card-projetos">
             <div class="conteudo-projetos">
                 <h2>04</h2>
@@ -162,6 +164,20 @@
                 </div>   
             </div>
           </div>
+
+          <div class="card-projetos">
+            <div class="conteudo-projetos">
+                <h2>05</h2>
+                <h3>Aplicação com React</h3>
+                <p>EM PROCESSO </p>
+                <a href="https://github.com/DevNewCome"target="_blank">Mais informações</a>
+                <div class="linha-git">
+                  <a class="id-icon-projetos" href="https://github.com/DevNewCome" target="_blank"><img class="img-icon" src="assets/images/git.png"></a>
+                </div>   
+            </div>
+          </div>
+
+          
 
         </div>
       </section>
