--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               No meu processo de estudante de programação, estou focado em aprender mais sobre o back-end, fazendo aplicacões práticas ficticias, utilizando NodeJs, React e express afim de testar meus conhecimentos adquiridos atráves dos meus estudos pela <a class="rocket" href="https://www.rocketseat.com.br/" target="_blank">rocketseat</a>
             </p>
           </div>
-      
+        </div>
         
       </section>
 
@@ -144,9 +144,9 @@
           <div class="card-projetos">
             <div class="conteudo-projetos">
                 <h2>04</h2>
-                <h3>Aplicação com React</h3>
-                <p>EM PROCESSO </p>
-                <a href="https://github.com/DevNewCome"target="_blank">Mais informações</a>
+                <h3>Prime flix</h3>
+                <p>Um mini projeto de uma página utilizando uma API de filmes em cartaz, utilizando react </p>
+                <a href="https://github.com/DevNewCome/primeflix"target="_blank">Source Code</a>
                 <div class="linha-git">
                   <a class="id-icon-projetos" href="https://github.com/DevNewCome" target="_blank"><img class="img-icon" src="assets/images/git.png"></a>
                 </div>   
